--- a/src/openhdwebui.client/src/app/files/files.component.html
+++ b/src/openhdwebui.client/src/app/files/files.component.html
@@ -1,5 +1,3 @@
-<h1 id="tableLabel">Files</h1>
-
 <!-- Loading Indicator with Inline Animation -->
 <div *ngIf="!files?.length" style="
   display: flex;
@@ -7,15 +5,14 @@
   align-items: center;
   height: 100vh;
   font-family: Arial, sans-serif;
-  background: #f5f7fa;
-  color: #333;">
-  <div style="font-size: 1.5rem; font-weight: bold; color: #444; display: flex; align-items: center;">
+  color: #fff;">
+  <div style="font-size: 1.5rem; font-weight: bold; color: #fff; display: flex; align-items: center;">
     Loading
     <span style="
       display: inline-block;
       width: 8px;
       height: 8px;
-      background-color: #444;
+      background-color: #fff;
       border-radius: 50%;
       margin-left: 5px;
       animation: loadingDot 1s infinite alternate;"></span>
@@ -23,7 +20,7 @@
       display: inline-block;
       width: 8px;
       height: 8px;
-      background-color: #444;
+      background-color: #fff;
       border-radius: 50%;
       margin-left: 5px;
       animation: loadingDot 1s infinite alternate;
@@ -32,7 +29,7 @@
       display: inline-block;
       width: 8px;
       height: 8px;
-      background-color: #444;
+      background-color: #fff;
       border-radius: 50%;
       margin-left: 5px;
       animation: loadingDot 1s infinite alternate;
