--- a/src/openhdwebui.client/src/app/system/system.component.html
+++ b/src/openhdwebui.client/src/app/system/system.component.html
@@ -11,7 +11,7 @@
       </mat-list>
     </mat-card>
 
-    <mat-card class="list-card">
+  <mat-card class="list-card">
       <mat-card-title>System Files</mat-card-title>
       <mat-list>
         <mat-list-item *ngFor="let file of files">
@@ -23,7 +23,11 @@
     </mat-card>
   </div>
 
-  <mat-card class="terminal-card">
+  <button mat-raised-button color="primary" class="terminal-toggle" (click)="toggleTerminal()">
+    {{ showTerminal ? 'Hide Terminal' : 'Show Terminal' }}
+  </button>
+
+  <mat-card class="terminal-card" [hidden]="!showTerminal">
     <mat-card-title>Terminal</mat-card-title>
     <div #terminal class="terminal"></div>
   </mat-card>
