--- a/src/openhdwebui.client/src/app/system/system.component.html
+++ b/src/openhdwebui.client/src/app/system/system.component.html
@@ -1,30 +1,37 @@
-<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+<div class="system-container">
+  <div class="row row-cols-1 row-cols-md-2 mb-3 text-center">
     <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">System commands</h4>
-            </div>
-          <div class="card-body">
-              <ul class="list-unstyled mt-3 mb-4" *ngFor="let command of commands">
-                <li>
-                    <button type="button" (click)="onCommandClick(command)" class="w-100 btn btn-lg btn-outline-primary">{{command.displayName}}</button>
-                </li>
-              </ul>
-          </div>
+      <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card-header py-3">
+          <h4 class="my-0 fw-normal">System Commands</h4>
         </div>
+        <div class="card-body">
+          <ul class="list-unstyled mt-3 mb-4" *ngFor="let command of commands">
+            <li>
+              <button type="button" (click)="onCommandClick(command)" class="w-100 btn btn-lg btn-outline-primary">{{command.displayName}}</button>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">System files</h4>
-            </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4" *ngFor="let file of files">
-              <li>
-                  <a role="button" class="w-100 btn btn-lg btn-outline-primary" href="api/system/get-file/{{ file.id }}">{{file.displayName}}</a>
-              </li>
-            </ul>
-          </div>
+      <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card-header py-3">
+          <h4 class="my-0 fw-normal">System Files</h4>
         </div>
+        <div class="card-body">
+          <ul class="list-unstyled mt-3 mb-4" *ngFor="let file of files">
+            <li>
+              <a role="button" class="w-100 btn btn-lg btn-outline-primary" href="api/system/get-file/{{ file.id }}">{{file.displayName}}</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <div class="terminal-wrapper" *ngIf="showTerminal">
+    <pre class="terminal">{{terminalText}}</pre>
+  </div>
+  <button class="btn btn-outline-light" (click)="toggleTerminal()">{{ showTerminal ? 'Hide Terminal' : 'Show Terminal' }}</button>
 </div>
